<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kanji Unlock</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_unlock">Write to Unlock</string>
    <string name="title_activity_select_pin">Select Pin</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="pin_reset_instruction">Enter old pin to disable pin</string>
    <string name="pin_begin_instruction">Select a new four digit pin number</string>
    <string name="pin_continue_instruction">Press the %1$s button to continue</string>
    <string name="pin_confirm_instruction">Enter pin again to confirm</string>
    <string name="pin_try_again_instruction">Wrong pin, try again</string>
    <string name="pin_correct_instruction">Pin successfully set</string>
    <string name="preview_text">Lockscreen preview</string>
    <string name="select_character_text">Select Characters</string>
    <string name="plus_sign">+</string>
    <string name="back_up_text">Set Pin</string>
    <string name="back_up_text_desc_text">Setup backup unlock method</string>
    <string name="preview_button_text">Preview</string>
    <string name="enable_switch_desc_text">Enable Kanji Unlock Lockscreen</string>
    <string name="enable_switch_text_text">Enable Lockscreen</string>
    <string name="disable_text">System Lockscreen</string>
    <string name="disable_text_desc_text">Disable default screen lock</string>
    <string name="delete_CAB_button_text">Delete</string>
    <string name="edit_CAB_button_text">Edit</string>
    <string name="selected_text">Selected</string>
    <string name="character_input_error">Invalid character, try another</string>
    <string name="character_input_title">Enter a character</string>
    <string name="write_instructions">Write \'%1$s\' to unlock</string>
    <string name="stroke_progress">Stroke \'%1$s\' of \'%2$s\'</string>
    <string name="write_try_again_instruction">Incorrect, try again</string>
</resources>
