<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.mide.kanjiunlock.SelectPin">

    <TextView
        android:id="@+id/instructions"
        android:gravity="center"
        android:text="@string/pin_begin_instruction"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:layout_above="@+id/pinEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/pinEditText"
        android:layout_centerInParent="true"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="35sp"
        android:maxLength="4"
        android:inputType="numberPassword"/>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            android:id="@+id/cancelButton"
            android:layout_width="10dp"
            android:textSize="20sp"
            android:layout_height="70dp" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok_button"
            android:layout_weight="1"
            android:id="@+id/okButton"
            android:layout_width="10dp"
            android:textSize="20sp"
            android:layout_height="70dp" />
    </LinearLayout>
</RelativeLayout>
