<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:background="#111"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".KanjiUnlock">
    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/step1Layout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:text="@string/select_character_text"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:padding="0dp"
            android:background="#151515"
            android:layout_width="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="80dp">
            <Button
                android:id="@+id/add_buttonn"
                android:layout_alignParentLeft="true"
                android:padding="0dp"
                android:gravity="center"
                android:layout_margin="0dp"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/plus_sign"
                android:textSize="40sp"/>
            <HorizontalScrollView
                android:layout_toRightOf="@+id/add_buttonn"
                android:layout_width="wrap_content"
                android:layout_height="75dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:padding="0dp"
                        android:gravity="center"
                        android:layout_margin="0dp"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="#fff"
                        android:textSize="40sp"/>
                    <Space
                        android:layout_width="3dp"
                        android:layout_height="0dp" />
                    <ImageButton
                        android:padding="0dp"
                        android:gravity="center"
                        android:layout_margin="0dp"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="#fff"
                        android:textSize="40sp"/>
                    <Space
                        android:layout_width="3dp"
                        android:layout_height="0dp" />
                    <ImageButton
                        android:padding="0dp"
                        android:gravity="center"
                        android:layout_margin="0dp"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="#fff"
                        android:textSize="40sp"/>
                    <Space
                        android:layout_width="3dp"
                        android:layout_height="0dp" />
                    <ImageButton
                        android:padding="0dp"
                        android:gravity="center"
                        android:layout_margin="0dp"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="#fff"
                        android:textSize="40sp"/>
                    <Space
                        android:layout_width="3dp"
                        android:layout_height="0dp" />
                    <ImageButton
                        android:padding="0dp"
                        android:gravity="center"
                        android:layout_margin="0dp"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="#fff"
                        android:textSize="40sp"/>
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/step1Layout"
        android:id="@+id/step2Layout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/backupText"
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:text="@string/back_up_text"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginEnd="105dp"
                android:layout_marginRight="105dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="#888"
                android:layout_centerVertical="true"
                android:id="@+id/backUpTextDesc"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:text="@string/back_up_text_desc_text"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:id="@+id/backupSwitch"
                android:paddingLeft="5dp"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:textOn="On"
                android:textOff="Off" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/step2Layout"
        android:id="@+id/step3Layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/enableSwitchText"
            android:textSize="19sp"
            android:text="@string/enable_switch_text_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="105dp"
                android:layout_marginEnd="105dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="#888"
                android:id="@+id/enableSwitchDesc"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:text="@string/enable_switch_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/enableSwitch"
                android:paddingLeft="5dp"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:textOn="On"
                android:textOff="Off" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/step3Layout"
        android:id="@+id/step4Layout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/disableText"
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:text="@string/disable_text"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginEnd="105dp"
                android:layout_marginRight="105dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="#888"
                android:layout_centerVertical="true"
                android:id="@+id/disableTextDesc"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:text="@string/disable_text_desc_text"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:id="@+id/disableSwitch"
                android:paddingLeft="5dp"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:textOn="On"
                android:textOff="Off" />
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/unlockButton"
        android:layout_width="150dp"
        android:onClick="UnlockScreen"
        android:text="@string/preview_button_text"
        android:layout_height="wrap_content" />
</RelativeLayout>
